<resources>
    <string name="app_name">DibujandoUnManana</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_quienessomos">¿Quiénes Somos?</string>
    <string name="menu_quehacemos">¿Qué Hacemos?</string>
    <string name="menu_campanias">Ver Campañas</string>
    <string name="menu_comosumarte">¿Cómo Sumarte?</string>
    <string name="menu_contactanos">Contáctanos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quienes_somos_1">Nos dedicamos a impulsar el desarrollo social de niñas, niños y
        adolescentes en situación de vulnerabilidad en México y Centro América con un modelo de
        inversión social que entrelaza la voluntad de ayudar de diversos actores y la transforma
        en programas sociales basados en los derechos humanos que generan impactos positivos a
        largo plazo. \n </string>
    <string name="quienes_somos_2">En octubre de 1997 nació Fundación Dibujando un Mañana, A.C. con
        el objetivo de invertir en instituciones que atienden a niñas, niños y adolescentes para
        impulsar el desarrollo institucional y garantizar la sustentabilidad de las mismas.\nLos
        más  de 20 años de evolución han estado marcados por diferentes acontecimientos de
        transformación, fortalecimiento, innovación y transparencia gracias a sus siete presidentes,
        40 miembros del Consejo Directivo, diferentes asesores en ocho Comités de trabajo y el
        Equipo Operativo.\nEl camino ha sido largo y aún queda mucho por hacer. Por eso estamos
        convencidos de que        la ruta es generar alianzas para crear condiciones idóneas que
        favorezcan la vida digna de todas las personas en nuestro país y la región. \n </string>
    <string name="quehacemos_modelo_fdum">Nuestro Modelo está inspirado en una visión sistémica
        y de carácter internacional que nos permite dimensionar en un mismo panorama a los
        diferentes actores sociales que se deben vincular a través de alianzas para lograr el
        Desarrollo Sostenible y alcanzar nuestro propósito.
        Somos una organización consciente del contexto en el cual se gestan las problemáticas
        sociales de las niñas, niños, adolescentes y jóvenes, así como también de la voluntad de
        ayudar de empresas, personas y organizaciones. Por eso nos enfocamos en la unión de estas
        voluntades, basándonos en estándares internacionales como la Cooperación Triangular,
        Gestión para Resultados de Desarrollo y Enfoque de Derechos Humanos, para fortalecerlas y
        potenciar su alcance e inversión social.</string>
    <string name="title_activity_donar">Donativos</string>
    <string name="descripcion_donativo_tarjeta">Haz tu donativo/pago único de forma segura utilizando tu
tarjeta de crédito o débito.</string>
    <string name="descripcion_donativo_deposito">Puede hacer las transferencias a través de su aplicación de Banca Electrónica o Aplicación Móvil. Asimismo, los depósitos los puede realizar en ventanillas de cualquier sucursal BBVA o en tiendas de conveniencia.</string>
    <string-array name="referencia_donativo">
        <item>Donativo Único</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string-array name="estado_registarse">
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Colima</item>
        <item>Coahuila</item>
        <item>Durango</item>
        <item>Estado de México</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>Michoacán de Ocampo</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>
    <string-array name="idioma_settings">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_perfil">Perfil</string>
    <string name="intro_1">¡Somos Fundación Dibujando un Mañana!</string>
    <string name="intro_2_titulo">Tú tienes el poder de transformar el mañana.</string>
    <string name="intro_2_texto">Nos dedicamos a impulsar el desarrollo social de niñas, niños y
        adolescentes en situación de vulnerabilidad en México y Centro América con un modelo de
        inversión social que entrelaza la voluntad de ayudar de diversos actores y la transforma en
        programas sociales basados en los derechos humanos que generan impactos positivos a largo
        plazo. \n </string>
    <string name="intro_3_titulo">Nuestros logros en 23 años</string>
    <string name="intro_3_text1">Invertidos</string>
    <string name="intro_3_text2">Organizaciones beneficiadas en más de un proyecto.</string>
    <string name="bienvenido_admin_main">¡Bienvenido!</string>
    <string name="instrucciones_admin_main">Cree, edite o elimine alguna de las campañas o
        iniciativas de Dibujando Un Mañana</string>
    <string name="editar_campañas_admin_main">Editar Campañas</string>
    <string name="editar_iniciativas_admin_main">Editar Iniciativas</string>
</resources>