<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_quienessomos"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_quienessomos" />
        <item
            android:id="@+id/nav_quehacemos"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_quehacemos" />
        <item
            android:id="@+id/nav_campanias"
            android:icon="@drawable/donar"
            android:title="@string/menu_campanias" />
        <item
            android:id="@+id/nav_comosumarte"
            android:icon="@drawable/corazon"
            android:title="@string/menu_comosumarte" />
        <item
            android:id="@+id/nav_contactanos"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_contactanos" />
    </group>
</menu>