<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.brg.dibujandounmanana.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.brg.dibujandounmanana.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mx.brg.dibujandounmanana.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_quienessomos"
        android:name="mx.brg.dibujandounmanana.ui.quienessomos.QuienesSomos"
        android:label="@string/menu_quienessomos"
        tools:layout="@layout/fragment_quienes_somos" />
    <fragment
        android:id="@+id/nav_quehacemos"
        android:name="mx.brg.dibujandounmanana.ui.quehacemos.QueHacemos"
        android:label="@string/menu_quehacemos"
        tools:layout="@layout/fragment_que_hacemos" />
    <fragment
        android:id="@+id/nav_campanias"
        android:name="mx.brg.dibujandounmanana.ui.campanias.Campanias"
        android:label="@string/menu_campanias"
        tools:layout="@layout/fragment_campanias" />
</navigation>